fix: Dark mode and spinner on reset password

--- a/src/app/profile/reset-password/reset-password.component.scss
+++ b/src/app/profile/reset-password/reset-password.component.scss
@@ -23,3 +23,10 @@
     }
   }
 }
+@media(prefers-color-scheme: dark) {
+  :host {
+    .reset-password-form {
+      --ion-text-color: #000;
+    }
+  }
+}
